# qnap-telegram-bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
